Add support for additional datatypes (#669)
Add support for additional datatypes

---------

Co-authored-by: fvolz <volz.fr@gmail.com>