@@ -14,28 +14,28 @@
  */
 package de.fraunhofer.iosb.ilt.faaast.service.model.value.primitive;
 
-import jakarta.xml.bind.DatatypeConverter;
+import java.util.Base64;
 import org.apache.commons.lang3.StringUtils;
 
 
 /**
- * A double value.
+ * A hex binary value.
  */
-public class DoubleValue extends TypedValue<Double> {
+public class Base64BinaryValue extends TypedValue<byte[]> {
 
-    public DoubleValue() {
+    public Base64BinaryValue() {
         super();
     }
 
 
-    public DoubleValue(Double value) {
+    public Base64BinaryValue(byte[] value) {
         super(value);
     }
 
 
     @Override
     public String asString() {
-        return DatatypeConverter.printDouble(value);
+        return Base64.getEncoder().encodeToString(value);
     }
 
 
@@ -46,7 +46,7 @@ public class DoubleValue extends TypedValue<Double> {
             return;
         }
         try {
-            this.setValue(DatatypeConverter.parseDouble(value));
+            this.setValue(Base64.getDecoder().decode(value));
         }
         catch (NumberFormatException e) {
             throw new ValueFormatException(e);
@@ -56,7 +56,7 @@ public class DoubleValue extends TypedValue<Double> {
 
     @Override
     public Datatype getDataType() {
-        return Datatype.DOUBLE;
+        return Datatype.BASE64_BINARY;
     }
 
 }
